k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-kube-pet
  namespace: test-kube-pet
  labels:
    app: test-kube-pet
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-kube-pet
  template:
    metadata:
      labels:
        app: test-kube-pet
    spec:
      containers:
        - name: test-kube-pet
          image: thiagolsfortunato/node-web-app
          imagePullPolicy: Never
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 3
