k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-kube-pet-service
  namespace: test-kube-pet
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: test-kube-pet
